Split show to 2 user and admin partials

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,317 +1,8 @@
 <p id="notice"><%= notice %></p>
 <% provide(:name, "My Profile") %>
 
-<h2>Personal Information Section</h2>
-
 <% if current_user.admin? %>
-
-<%= form_with model: @profile, class: "form-scaff"  do |form| %>
-  
-  <div class="field row mb-3">
-      <%= form.label "Title", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :title, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Marital Status", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :marital_status, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Gender", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :gender, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "First Name", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :firstname, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Last Name", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :lastname, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-    <%= form.label "Email", class: "form-label col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <div class="custom">
-      <%= current_user.email %>
-      </div>
-    </div>
-  </div>
-
-  <div class="actions">
-    <div class="btn-box">
-      <%= link_to 'Edit', edit_profile_path(@profile), method: :get %>|
-      <%= link_to 'Back', request.referrer, method: :get %>
-    </div>
-  </div>
-<% end %>
-
+  <%= render 'admin', profile: @profile %>
 <% else %>
-<%= form_with model: @profile, class: "form-scaff"  do |form| %>
-  
-  <div class="field row mb-3">
-      <%= form.label "Title", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :title, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Marital Status", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :marital_status, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Gender", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :gender, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "First Name", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :firstname, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Last Name", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :lastname, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-    <%= form.label "Email", class: "form-label col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <div class="custom">
-      <%= current_user.email %>
-      </div>
-    </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Date of Birth", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :DOB, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-    <%= form.label "Download Identification", class: "col-sm-2 col-form-label" %>
-    <% if @profile.identification? == false %>
-    <div class="col-sm-10">
-      <p>Kindly upload Means of Identifivation!</p>
-    </div>
-    <% else %>
-    <div class="col-sm-10">
-     <iframe src=<%= @profile.identification_url %> width="400" height="400" style="border: none;" overflow="hidden"> </iframe>
-      <%= link_to 'Download Means of Identification', @profile.identification_url, target: "_blank" %>
-    </div>
-    <% end %>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Phone Number", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :phone, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Nationality", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :nationality, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Home Address", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :Address, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-    <h2>Bank Section</h2>
-  </div>
-
-  <div class="field row mb-3">
-    <%= form.label "Account Name", class: "col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <%= form.text_field :acc_name, readonly:true %>
-    </div>
-  </div>
-
-  <div class="field row mb-3">
-    <%= form.label "Bank Name", class: "col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <%= form.text_field :bank_name, readonly:true %>
-    </div>
-  </div>
-
-    <div class="field row mb-3">
-    <%= form.label "Account Number", class: "col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <%= form.text_field :acc_number, readonly:true %>
-    </div>
-  </div>
-
-    <div class="field row mb-3">
-    <%= form.label "Branch Name", class: "col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <%= form.text_field :branch_name, readonly:true %>
-    </div>
-  </div>
-
-  <div class="field row mb-3">
-    <h2>Employer/Business Information Section</h2>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Name of Employer/Business", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :workplace, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Business/Employer's Address", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :workplace_address, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Business/Employer's Phone Number", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :emp_phone, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Duration of Employment", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :emp_duration, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Job Title", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :job_title, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Annual Gross Salary(NGN)", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :monthly_net, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Other Income (NGN)", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :other_income, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-    <h2>Referees Section</h2>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Title", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :ref_title, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Gender", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :ref_gender, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "First Name", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :ref_firstname, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Last Name", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :ref_lastname, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Address", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :ref_address, readonly:true %>
-      </div>
-  </div> 
-
-  <div class="field row mb-3">
-      <%= form.label "Phone Number", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :ref_phone, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-      <%= form.label "Email", class: "col-sm-2 col-form-label" %>
-      <div class="col-sm-10">
-        <%= form.text_field :ref_email, readonly:true %>
-      </div>
-  </div>
-
-  <div class="field row mb-3">
-    <h2>Declaration Section</h2>
-  </div>
-
-  <div class="field row mb-3">
-    <%= form.label "Download Declaration", class: "col-sm-2 col-form-label" %>
-    <% if @profile.attachment? == false %>
-      <div class="col-sm-10">
-        <p>Kindly Upload Declaration!</p>
-      </div>
-    <% else %>
-      <div class="col-sm-10">
-        <iframe src=<%= @profile.attachment_url %> width="600" height="780" style="border: none;"> </iframe>
-        <%= link_to 'Download Declaration', @profile.attachment_url %>
-      </div>
-    <% end %>
-  </div>
-
-  <td></td>
-
-  <div class="actions">
-    <div class="btn-box">
-      <%= link_to 'Edit', steps_after_registration_path(:personal) %>|
-      <%= link_to 'Back', request.referrer, method: :get %>
-    </div>
-  </div>
-<% end %>
-
+  <%= render 'user', profile: @profile %> 
 <% end %>
